tests/chapter_15/invalid_types/cast_to_array_type_3.c
int main(void)
{
    LONG64 arr[6];
    // casts to array type are illegal
    return ((LONG64(([2])[3]))arr);
}